fix: absent `row-gap` in the grid styling for `event#index`

--- a/app/assets/stylesheets/layouts/_event_index.scss
+++ b/app/assets/stylesheets/layouts/_event_index.scss
@@ -5,7 +5,7 @@
 .events-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(max(240px,30vw), 1fr));
-  column-gap: var(--space-m);
+  gap: var(--space-m);
   margin-bottom: var(--space-xl);
   margin-left: var(--space-xl);
   margin-right: var(--space-xl);
